[package]
authors = ["Andrei Sousa <sousandrei@gmail.com>"]
description = "handy git-hook and cli for conventional commits"
edition = "2018"
keywords = ["git", "cli", "conventional-commits", "conventional", "commits"]
license-file = "LICENSE"
name = "cc-cli"
readme = "README.md"
repository = "https://github.com/sousandrei/cc-cli"
version = "0.1.6"

[dependencies]
anyhow = "1.0.96"
argh = "0.1.13"
inquire = "0.7.5"
