[package]
authors = ["Andrei Sousa <sousandrei@gmail.com>"]
description = "handy git-hook and cli for conventional commits"
edition = "2018"
keywords = ["git", "cli", "conventional-commits", "conventional", "commits"]
license-file = "LICENSE"
name = "cc-cli"
readme = "README.md"
repository = "https://github.com/sousandrei/cc-cli"
version = "0.1.7"

[dependencies]
anyhow = "1.0.99"
argh = "0.1.13"
inquire = { git = "https://github.com/sousandrei/inquire.git", rev = "02e5fd30" }
